Harden academic structure services and hierarchy APIs